# Random-Projects

./: README.md
bad_apple_console/: CMakeLists.txt  README.md
bad_apple_console/src/: main.cpp
connect4/: game.c  game.h  ia.c  ia.h  main.c  server.c  utils.c  utils.h
geoDash/: CMakeLists.txt  README.md
geoDash/levels/: lvl.json  test.json
geoDash/src/: editeur.cpp  editeur.h  game.cpp  game.h  main.cpp  parse_level.cpp  parse_level.h  selection.cpp  selection.h
labyrinthe/: README.md
perlin_noise/: CMakeLists.txt
perlin_noise/src/: main.cpp  perlin.cpp
rubiksCube/: CMakeLists.txt  README.md
rubiksCube/include/glad/: glad.h
rubiksCube/src/: camera.h  form.h  glad.c  main.cpp  rubiks.h  shader.h  shader.vs
scripts/: edt.sh
